tests/baselines/reference/genericLambaArgWithoutTypeArguments.errors.txt
genericLambaArgWithoutTypeArguments.ts(7,11): error TS2314: Generic type 'Foo<T>' requires 1 type argument(s).


==== genericLambaArgWithoutTypeArguments.ts (1 errors) ====
    interface Foo<T> {
       x: T;
    }
    function foo(a) {
       return null;
    }
    foo((arg: Foo) => { return arg.x; });
              ~~~
!!! error TS2314: Generic type 'Foo<T>' requires 1 type argument(s).
    